--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="clear"/>
     <string name="app_name">LiveoMVP</string>
     <string name="action_settings">Settings</string>
+
+    <string name="date_in_full">%1$s, %2$d de %3$s de %4$d</string>
+    <string-array name="date_month_in_full">
+        <item>janeiro</item>
+        <item>fevereiro</item>
+        <item>março</item>
+        <item>abril</item>
+        <item>maio</item>
+        <item>junho</item>
+        <item>julho</item>
+        <item>agosto</item>
+        <item>setembro</item>
+        <item>outubro</item>
+        <item>novembro</item>
+        <item>dezembro</item>
+    </string-array>
 </resources>
